--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="description of your website/webpage, make sure you use keywords!" />
-    <meta property="og:title" content="short title of your website/webpage" />
-    <meta property="og:description" content="description of your website/webpage" />
+    <meta property="og:title" content="Mình nhận lì xì nha" />
+    <meta property="og:url" content="https://qxnam.github.io/lixi-tet-2024/" />
+    <meta property="og:image" content="https://qxnam.github.io/lixi-tet-2024/data/smile.png" />
     <meta property="og:type" content="article" />
     <title>lixi4me.poor</title>
     <link rel="icon" href="./assets/icon_boy.png" type="image/png">
