--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:title" content="Mình nhận lì xì nha" />
-    <meta property="og:url" content="https://qxnam.github.io/lixi-tet-2024/" />
-    <meta property="og:image" content="https://qxnam.github.io/lixi-tet-2024/data/smile.png" />
+    <meta property="og:url" content="https://qxnam.github.io/lixi2024/" />
+    <meta property="og:image" content="https://qxnam.github.io/lixi2024/data/smile.png" />
     <meta property="og:type" content="article" />
     <title>lixi4me.poor</title>
     <link rel="icon" href="./assets/icon_boy.png" type="image/png">
